playground/styles.css
/* ... */
.laji-form .blocker-content .react-spinner_bar {
	background-color: white;
}

.laji-form .floating-buttons-container {
	bottom: 10%;
	position: absolute;
	z-index: 1;
	left: 50%;
	transform: translate(-50%, 0);
}

.laji-form .margin-top {
	margin-top: 5px;
}

.laji-form .top-no-border-radius.panel {
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	border-top: none;
}

.laji-form .clear-margin-above {
	margin-top: -5px;
}

.laji-form.media-add-modal button {
	margin-bottom: 12px;
}
.laji-form.media-add-modal .modal-body > *:last-child {
	margin-bottom: inherit;
}

.laji-form .running-jobs {
	position: fixed;
	left: 50%;
	top: 50%;
	transform: translate(-50%, 0);
	z-index: 100009000;
	color: white;
	font-weight: bold;
}
.laji-form .running-jobs .progress {
	margin-top: 5px;
}
@-webkit-keyframes rotating /* Safari and Chrome */ {
	from {
		-webkit-transform: rotate(0deg);
		-o-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	to {
		-webkit-transform: rotate(360deg);
		-o-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}
@keyframes rotating {
	from {
		-ms-transform: rotate(0deg);
		-moz-transform: rotate(0deg);
		-webkit-transform: rotate(0deg);
		-o-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	to {
		-ms-transform: rotate(360deg);
		-moz-transform: rotate(360deg);
		-webkit-transform: rotate(360deg);
		-o-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}
.rotating {
	-webkit-animation: rotating 2s linear infinite;
	-moz-animation: rotating 2s linear infinite;
	-ms-animation: rotating 2s linear infinite;
	-o-animation: rotating 2s linear infinite;
	animation: rotating 2s linear infinite;
}

/* Hide text input arrows */
/* Chrome, Safari, Edge, Opera */
.laji-form input::-webkit-outer-spin-button,
.laji-form input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}
/* Firefox */
.laji-form input[type=number] {
	-moz-appearance:textfield;
}

.laji-form .horizontally-centered {
	display: block !important;
	text-align: center;
}
.laji-form .horizontally-centered:not(legend) {
	margin: auto;
}

.laji-form .row-height {
	height: 25px;
	line-height: 25px;
}

.laji-form legend.hidden-title-text span {
	visibility: hidden;
	white-space: nowrap;
}

.laji-form .not-strong {
	font-weight: normal;
}

.laji-form .invisible {
	visibility: hidden;
}

.laji-form .checkbox-row > .form-group {
	display: inline-block;
	margin-right: 30px;
}
.tooltip.lg .tooltip-inner {
	font-size: 14px;
	max-width: 400px;
}
.text-left {
	text-align: left;
}

.laji-form .input-highlight {
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,1);
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,1);
}

/* Select widget options to be single line & use all width needed. */
.laji-form .rw-popup-container {
	right: initial;
	min-width: 100%;
}
.laji-form .rw-popup {
	right: initial;
	min-width: 100%;
}
.laji-form .rw-list-option {
	white-space: nowrap;
}

.laji-form-fill {
	display: block;
	margin: auto;
}

.laji-form .laji-form-hide-btn-label, .laji-form .btn.btn-default.laji-form-hide-btn-label {
	color: rgba(0, 0, 0, 0);
}

.laji-form .informal-group-image {
	filter: saturate(0);
	display: block;
}

.laji-form .informal-group-image.MVL\.26, .laji-form.informal-group-image.MVL\.26 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.26.svg);
}
.laji-form .informal-group-image.MVL\.1, .laji-form.informal-group-image.MVL\.1 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.1.svg);
}
.laji-form .informal-group-image.MVL\.39, .laji-form.informal-group-image.MVL\.39 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.39.svg);
}
.laji-form .informal-group-image.MVL\.27, .laji-form.informal-group-image.MVL\.27  {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.27.svg);
}
.laji-form .informal-group-image.MVL\.232, .laji-form.informal-group-image.MVL\.232 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.232.svg);
}
.laji-form .informal-group-image.MVL\.233, .laji-form.informal-group-image.MVL\.233  {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.233.svg);
}
.laji-form .informal-group-image.MVL\.2, .laji-form.informal-group-image.MVL\.2 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.2.svg);
}
.laji-form .informal-group-image.MVL\.40, .laji-form.informal-group-image.MVL\.40 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.40.svg);
}
.laji-form .informal-group-image.MVL\.37, .laji-form.informal-group-image.MVL\.37 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.37.svg);
}
.laji-form .informal-group-image.MVL\.28, .laji-form.informal-group-image.MVL\.28 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.28.svg);
}
.laji-form .informal-group-image.MVL\.41, .laji-form.informal-group-image.MVL\.41 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.41.svg);
}
.laji-form .informal-group-image.MVL\.21, .laji-form.informal-group-image.MVL\.21 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.21.svg);
}
.laji-form .informal-group-image.MVL\.28, .laji-form.informal-group-image.MVL\.29 {
	background-image: url(https://cdn.laji.fi/images/informalGroups/MVL.28.svg);
}

.laji-form legend.has-help div {
	display: initial;
}

.laji-form-col-sortable {
	cursor: pointer;
}
.laji-form-col-sortable.darker:hover {
	background-color: #eaeaea;
}
.laji-form-col-desc:after {
	content: "↑";
	position: absolute;
	margin-left: 5px;
	float: right;
}
.laji-form-col-asc:after {
	content: "↓";
	position: absolute;
	margin-left: 5px;
	float: right;
}

.laji-form-col-options {
	float: right;
}
.laji-form-col-options button {
	width: 20px;
	height: 20px;
	font-size: 11px;
}

.laji-form-col-sortable .react-spinner {
	right: 14px;
	top: 17px;
	width: 25px;
	height: 25px;
}
/* ... */

